<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simone.activity_save_pref.start_activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref1_text"
            android:textSize="22sp"
            android:layout_weight="0"/>

        <EditText
            android:layout_width="0pt"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/pref1"
            android:textSize="20sp"
            android:hint="@string/pref_hint"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout0"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref2_text"
            android:textSize="22sp"
            android:layout_weight="0"/>

        <EditText
            android:layout_width="0pt"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/pref2"
            android:textSize="20sp"
            android:hint="@string/pref_hint"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:text="@string/pref3_text"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box1"
                android:textSize="18sp"
                android:id="@+id/checkBox0"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box2"
                android:textSize="18sp"
                android:id="@+id/checkBox1"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box3"
                android:textSize="18sp"
                android:id="@+id/checkBox2"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box4"
                android:textSize="18sp"
                android:id="@+id/checkBox3"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/linearLayout3"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref4_text"
            android:textSize="22sp"
            android:layout_weight="0"
            android:id="@+id/textView"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button1"
                android:textSize="18sp"
                android:id="@+id/radioButton1"
                android:onClick="radio_1_click"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button2"
                android:textSize="18sp"
                android:id="@+id/radioButton2"
                android:onClick="radio_2_click"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button3"
                android:textSize="18sp"
                android:id="@+id/radioButton3"
                android:onClick="radio_3_click"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button4"
                android:textSize="18sp"
                android:id="@+id/radioButton4"
                android:onClick="radio_4_click"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_activity_b"
        android:id="@+id/start_activity_b"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
